--- a/packages/styles/_variables.scss
+++ b/packages/styles/_variables.scss
@@ -91,6 +91,7 @@ $dark-theme: (
   form-border-color: $v-dark-color-border,
   form-border-color-focus: $v-dark-color-border,
   form-background-color: $v-dark-color-elevation-2,
+  form-background-drag-color: rgb(81, 81, 81),
   form-background-color-focus: $v-dark-color-elevation-3,
   toast-background: $v-gray-850,
   toast-button-color: $v-gray-100,
@@ -126,6 +127,7 @@ $light-theme: (
   form-border-color: $v-light-color-border,
   form-border-color-focus: $v-light-color-border,
   form-background-color: $v-light-color-elevation-2,
+  form-background-drag-color: rgb(248, 248, 248),
   form-background-color-focus: $v-light-color-elevation-3,
   toast-background: $v-gray-850,
   toast-button-color: $v-gray-100,
